--- a/app/src/main/res/layout/swars_layout.xml
+++ b/app/src/main/res/layout/swars_layout.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#00070707">
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/swName"
@@ -19,42 +22,42 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Height" />
+
         <TextView
             android:id="@+id/swMass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/swHairColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/swSkinColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/swEyeColor"
             android:layout_width="match_parent"
             android:layout_height="33dp"
             android:layout_weight="1" />
+
         <TextView
             android:id="@+id/swBirthYear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/swGender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
